name and bg color changes

--- a/github.html
+++ b/github.html
@@ -1,7 +1,7 @@
 <html>
-    <body>
-        <h2 class="git">
-        my frist github Project
+    <body class="git">
+        <h2>
+        shaki's  github Project
         </h2>
     </body>
 </html>
